Fixed dark mode.

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -64,7 +64,8 @@ footer { height: 30px; position: absolute; bottom: 0; left: 0; right: 0; backgro
 .testmode { float: right; background-color: red; color: white; font-size: 10px; font-weight: bold; padding: 0 3px; margin: 8px 10px 0 0; border-radius: 2px; vertical-align: middle; }
 .samode { float: right; color: white; font-size: 10px; font-weight: bold; padding: 0 8px; height: 30px; line-height: 16px; margin: 0; line-height: 30px; width: 45px; }
 
-footer .status { float: right; font-size: 11px; margin: 0 10px 0 0; height: 30px; line-height: 30px; padding-right: 10px; border-right: 1px solid #E0E0E0; max-width: 400px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
+footer .status { float: right; font-size: 11px; margin: 0 10px 0 0; height: 30px; line-height: 30px; padding-right: 10px; border-right: 1px solid #404040; max-width: 400px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
+.light footer .status { border-right-color: #E0E0E0; }
 
 .startmenu .ui-xs { height: 318px !important; }
 .startmenu { position: fixed; top: 45px; height: 490px; background-color: #404040; width: 500px; z-index: 32; border-radius: 0 0 3px 0; box-shadow: 10px 10px 20px rgba(0,0,0,0.1); transition: all 0.1s; opacity: 0; transform: translate(0px, -80px); }
